# ChimeraMesh

./: CMakeLists.txt
Apps/Viewer/: CMakeLists.txt  main.cpp
Apps/Viewer/Resources/: resources.qrc  style.qss
Apps/Viewer/Resources/Translations/: en_US.ts  zh_CN.qm  zh_CN.ts
Apps/Viewer/Scene/: SceneManager.cpp  SceneManager.h
Apps/Viewer/Widgets/: GlobalSignalEmiiter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OSGWidget.cpp  OSGWidget.h  QRibbon.cpp
